--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -11,7 +11,7 @@ $text-body-disabled: #CACACA;
 // $blue: #2A65B5;
 // $grey: #cdd4d2;
 
-$green: #719E90;
+$green: #3CC49C;
 $yellow: #F7E923;
 $orange: #F68B21;
 $maroon: #E56395;
@@ -26,7 +26,7 @@ $colour4: $maroon;
 $colour5: $blue;
 
 
-$page-title: $green;
+$page-title: $blue;
 
 $device-width-sm: 568px;
 $device-width-md: 768px;
