--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <div class="container home-inner">
 	<div class="container-center home-inner-center">
 		<div class="col-full text-center">
-			<h1 class="home-title">Andrew and Sarah</h1>
+			<%= image_tag "sarah-and-andrew.svg", class: "home-image" %>
+		</div>
+		<div class="col-full text-center">
+			<h1 class="home-title">Sarah and Andrew</h1>
 		</div>
 		<div class="col-full text-center">
 			<h2 class="home-subtitle">Nov 26th 2016, Christchurch</h2>
