--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -27,6 +27,10 @@ label {
 }
 
 form {
-    min-width: 400px;
+    min-width: 500px;
 	margin-bottom: 100px;
+}
+
+.form-login {
+	min-width: 400px;
 }
