--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -23,6 +23,13 @@
 
 .rsvp-label {
 	margin-right: 10px;
+	font-size: 24px;
+}
+
+.rsvp-textarea-wrapper {
+	p {
+		margin-bottom: 0.5rem;
+	}
 }
 //.rsvp-label {
 // 	cursor: pointer;
