--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -43,8 +43,7 @@ html {
 }
 
 
-h1, h2, h3 {
-	// font-family: 'daydreamerregular',sans-serif;
+h1, h2, h3, h4 {
   font-family: 'Amatic SC', cursive;
 	font-weight: 100;
 	margin-top: 0;
@@ -99,15 +98,14 @@ h4 {
 }
 
 h5 {
-  font-style: italic;
+  font-weight: 400;
   font-size: 24px;
   margin-bottom: 0rem;
 }
 
 p, ul, ol, pre, table, blockquote {
   margin-top: 0rem;
-  margin-bottom: 2.25rem;
-
+  margin-bottom: 1rem;
 }
 
 
