--- a/app/views/pages/rsvp.html.erb
+++ b/app/views/pages/rsvp.html.erb
@@ -22,10 +22,10 @@
 					<ul class="list rsvp-list">
 						<%= f.fields_for :users, f.object.users.order(:name) do |m| %>
 					      <li class="rsvp-item">
-					      	<h2 class="rsvp-title"> <%= m.object.first_name %></h2>
+					      	<h4 class="rsvp-title"> <%= m.object.first_name %></h4>
 							<div class="rsvp-row">
 								<div class="rsvp-col">
-									<h3>Attending</h3>
+									<h5>Attending?</h5>
 								</div>
 								<div class="rsvp-col">
 						        	<%= m.radio_button :status, 'attending' %> 
@@ -37,7 +37,7 @@
 							</div>
 							<div class="rsvp-dietary rsvp-row">
 						        <div class="rsvp-col">
-									<h3>Dietary Requirements?</h3>
+									<h5>Dietary Requirements?</h5>
 								</div>
 								<div class="rsvp-col">
 							        <input type="radio" name="diet_<%= m.object.first_name %>" value="yes" class="radio-button">
@@ -46,7 +46,10 @@
 							        <%= label :diet, 'No', class:"rsvp-label" %>
 						        </div>
 						        <div class="rsvp-col-full">	
-							    	<%= m.text_area :dietary_requirements, class:"rsvp-textarea hide" %>
+						        	<div class="rsvp-textarea-wrapper hide">
+						        		<p>Please Specify</p>
+							    		<%= m.text_area :dietary_requirements, class:"rsvp-textarea" %>
+							    	</div>
 							    </div>
 							</div>
 					      </li>
