--- a/app/views/pages/details.html.erb
+++ b/app/views/pages/details.html.erb
@@ -2,36 +2,64 @@
 	<div class="container-center page-heading">
 		<h1 class="page-title">Details</h1>
 	</div>
-	<section class="container-center page-section">
+	<section class="container-center page-section details-section">
 		<div class="col-full">
-			<h2 class="text-center">Ceremony</h2>
+			<h4 class="">Ceremony</h4>
 		</div>
-		<div class="col-full text-center">
-			<p>Edmond Gardens </p>
-			<p>2:00pm 429 Ferry Road, Upper Riccarton, Christchurch</p>
+		<div class="col-1-2">
+			<div class="details-details">
+				
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Time:</strong></div>
+					<div class="details-content">2:00pm</div>
+				</div>
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Location:</strong></div>
+					<div class="details-content"><span>Edmond Gardens <br> Ferry Rd & Aldwins Rd <br> Christchurch 8062</span></div>
+				</div>
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Notes:</strong></div>
+					<div class="details-content">Here are some extra notes that will help you in knowing what to do here. E.g Parking at the Edmonds Gardens</div>
+				</div>
+			</div>
 		</div>
-		<div class="col-full text-center">
-		  	<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
+		<div class="col-1-2">
+			<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
 			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=Edmonds+Park" allowfullscreen class="hidden-mobile"></iframe>
+
 		</div>
 		<div class="col-full text-center">
 			<a href="https://www.google.co.nz/maps/place/Edmonds+Park/@-43.54065,172.6646339,18z/data=!4m5!3m4!1s0x6d3189ebef457209:0xf00ef87655c16f0!8m2!3d-43.54065!4d172.6657282?hl=en" class="btn btn-yellow col-full hidden-desktop" target="_blank" >View on Google Maps</a>
 		</div>
 	</section>
+
 	<section class="container-center page-section">
 		<div class="col-full">
-			<h2 class="text-center">Reception</h2>
+			<h4 class="">Reception</h4>
+		</div>
+		<div class="col-1-2">
+			<div class="details-details">
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Time:</strong></div>
+					<div class="details-content">4:30pm</div>
+				</div>
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Location:</strong></div>
+					<div class="details-content"><span>YMCA <br> 12 Hereford St <br> Christchurch Central <br> Christchurch 8140</span></div>
+				</div>
+				<div class="details-content-wrapper">
+					<div class="details-title"><strong>Notes:</strong></div>
+					<div class="details-content">Here are some extra notes that will help you in knowing what to do here. E.g Parking at the Edmonds Gardens</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
+			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=YMCA+Hereford+Street" allowfullscreen class="hidden-mobile"></iframe>
+
 		</div>
 		<div class="col-full text-center">
-			<p>YMCA</p>
-			<p>429 Ferry Road, Upper Riccarton, Christchurch</p>
-		</div>
-		<div class="col-full text-center">
-		  	<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
-			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=YMCA" allowfullscreen class="hidden-mobile"></iframe>
-		</div>
-		<div class="col-full text-center">
-			<a href="https://goo.gl/maps/4U2iYtKPWfv" class="btn btn-yellow col-full hidden-desktop" target="_blank">View on Google Maps</a>
+			<a href="https://www.google.co.nz/maps/place/YMCA/@-43.5322407,172.626063,17z/data=!3m1!4b1!4m5!3m4!1s0x6d318a3fa3b163ef:0x1a0e7aab37d371fe!8m2!3d-43.5322407!4d172.628257?hl=en" class="btn btn-yellow col-full hidden-desktop" target="_blank" >View on Google Maps</a>
 		</div>
 	</section>
 </div>
