--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -29,6 +29,13 @@
 	flex:  0 0 100%;
 }
 
+.col-1-2 {
+	flex:  0 0 100%;
+	@include respond($device-width-md) {
+		flex:  0 0 50%;
+	}
+}
+
 .col-padding {
 	padding-left: 20px;
 	padding-right: 20px;
