--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="nav container-center">
+<nav class="nav container-center nav-top">
 	<button class="btn hidden-desktop btn-mobile col-full">Menu</button>
 	<ul class="list list-horizontal nav-list">
 		<% if user_signed_in? %>
