--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Asw</title>
+  <title>Sarah and Andrew Wedding Site</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag "favicon.ico" %>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Athiti" rel="stylesheet">
 </head>
