--- a/app/assets/stylesheets/home-list.scss
+++ b/app/assets/stylesheets/home-list.scss
@@ -15,23 +15,26 @@
 }
 
 .home-title {
-	// font-size: 28px;
-	// margin-bottom: 0;
-	// @include respond($device-width-sm) {
-	// 	font-size: 48px;
-	// }
+	font-size: 48px;
+	margin-bottom: 0;
+	@include respond($device-width-sm) {
+		font-size: 72px;
+	}
 }
 
 .home-subtitle {
-	// font-size: 18px;
-	// margin-bottom: 0;
-	// @include respond($device-width-sm) {
-	// 	font-size: 24px;
-	// }
+	font-size: 36px;
+	margin-bottom: 0;
+	@include respond($device-width-sm) {
+		font-size: 64px;
+	}
 }
 
 .home-image {
-	width: 420px;
+	width: 220px;
+	@include respond($device-width-sm) {
+		width: 420px;
+	}
 }
 
 .home-nav {
