--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -35,6 +35,7 @@ $colour5-text: $white;
 
 $page-title: $text-body;
 
+$device-width-xs: 400px;
 $device-width-sm: 568px;
 $device-width-md: 768px;
 $device-width-lg: 1024px;
