--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -31,8 +31,9 @@
 }
 
 .btn-mobile {
-  background-color: $orange;
-  margin-bottom: 20px;
+  background-color: $lite-green;
+  padding: 6px;
+  flex: 0 0 80%;
 }
 
 .btn-full {
