--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,10 +1,14 @@
 
 
 .nav {
-	padding: 20px;
 	margin: 0 auto 20px;
 	display: flex;
     justify-content: center;
+
+	padding: 20px 30px;
+    @include respond($device-width-sm) {
+    	padding: 20px;
+    }
 
 	li {
 		display: inline-block;
@@ -129,7 +133,9 @@
 }
 
 .nav-top {
-	margin-top: -60px;
+	@include respond($device-width-sm) {
+		margin-top: -60px;
+	}
 }
 
 .nav-mobile {
