--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -1,17 +1,26 @@
 .page-title {
 	margin-bottom: 10px;
 	color: $page-title;
-	font-size: 64px;
+	font-size: 48px;
+	@include respond($device-width-sm) {
+		font-size: 64px;
+	}
 }
 
 .page-message {
 	margin-bottom: 0;
 }
 
-.page-heading {
-	margin-bottom: 40px;
+.page-heading {	
+  margin-bottom: 20px;
+  @include respond($device-width-sm) {
+    margin-bottom: 40px;
+  }
 }
 
 .page-section {
-	margin-bottom: 40px;
+  margin-bottom: 20px;
+  @include respond($device-width-sm) {
+    margin-bottom: 40px;
+  }
 }
