add nav to home page

--- a/app/views/pages/_home_mobile_nav.html.erb
+++ b/app/views/pages/_home_mobile_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="nav container-center nav-slide nav-top">
-	<button class="btn hidden-desktop btn-mobile col-full">Menu</button>
+<nav class="nav container-center nav-top nav-slide hidden-desktop">
+	<button class="btn btn-mobile col-full">Menu</button>
 	<ul class="list list-horizontal nav-list">
 		<% if user_signed_in? %>
 			<li><%= link_to "Home" , root_path %></li>
