--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'pages/home_mobile_nav' %>
 <div class="container home-inner">
 	<div class="container-center home-inner-center">
 		<div class="col-full text-center">
