add footer back in

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
-<!-- <footer class="footer">
+<footer class="footer">
 	<div class="footer-img">
-		<%#= image_tag 'flowers-footer-left.svg', class:"border-img--left border-img--bottom" %>
+		<%= image_tag 'flowers-footer-left.svg', class:"border-img--left border-img--bottom" %>
 	</div>
 	<div class="footer-middle">
-		<%#= mail_to "andrew.d.nicholas@gmail.com", nil, class: "link footer-link--left" %>
-		<%#= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "link footer-link--right") %>
+		<%= mail_to "andrew.d.nicholas@gmail.com", nil, class: "link footer-link--left" %>
+		<%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "link footer-link--right") %>
 	</div>
 	<div class="footer-img">
-	<%#= image_tag 'flowers-footer-right.svg', class:"border-img--right border-img--bottom" %>
+	<%= image_tag 'flowers-footer-right.svg', class:"border-img--right border-img--bottom" %>
 	</div>
-</footer> -->
+</footer>
