--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,22 @@
 <footer class="footer">
-	<div class="footer-img">
-		<%= image_tag 'flowers-footer-left.svg', class:"border-img--left border-img--bottom" %>
+	<div class="footer-top">
+		<!-- <div class="footer-inner"> -->
+			<div class="footer-img">
+				<%= image_tag 'flowers-footer-left.svg', class:"border-img--left border-img--bottom" %>
+			</div>
+			<div class="footer-middle">
+				<% unless current_page?(controller: 'devise/sessions', action: 'new') %>
+					<%= mail_to "andrew.d.nicholas@gmail.com", nil, class: "link footer-link--left hidden-mobile" %>
+					<%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "link footer-link--right hidden-mobile") %>
+				<% end %>
+			</div>
+			<div class="footer-img">
+				<%= image_tag 'flowers-footer-right.svg', class:"border-img--right border-img--bottom" %>
+			</div>
+		<!-- </div> -->
 	</div>
-	<div class="footer-middle">
-		<% unless current_page?(controller: 'devise/sessions', action: 'new') %>
-			<%= mail_to "andrew.d.nicholas@gmail.com", nil, class: "link footer-link--left" %>
-			<%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "link footer-link--right") %>
-		<% end %>
-	</div>
-	<div class="footer-img">
-		<%= image_tag 'flowers-footer-right.svg', class:"border-img--right border-img--bottom" %>
+	<div class="footer-bottom hidden-desktop">
+		<%= mail_to "andrew.d.nicholas@gmail.com", nil, class: "link footer-link--left footer-link-bottom footer-bottom" %>
+		<%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "link footer-link--right footer-link-bottom footer-bottom") %>
 	</div>
 </footer>
