add more content

--- a/app/views/pages/details.html.erb
+++ b/app/views/pages/details.html.erb
@@ -15,11 +15,11 @@
 				</div>
 				<div class="details-content-wrapper">
 					<div class="details-title"><strong>Location:</strong></div>
-					<div class="details-content"><span>Edmond Gardens <br> Ferry Rd & Aldwins Rd <br> Christchurch 8062</span></div>
+					<div class="details-content"><span>Edmond’s Factory Gardens <br> Ferry Rd & Aldwins Rd <br> Christchurch 8062</span></div>
 				</div>
 				<div class="details-content-wrapper">
 					<div class="details-title"><strong>Notes:</strong></div>
-					<div class="details-content">Here are some extra notes that will help you in knowing what to do here. E.g Parking at the Edmonds Gardens</div>
+					<div class="details-content">Parking is available at the venue - please drive down the driveway and park on the back field.</div>
 				</div>
 			</div>
 		</div>
@@ -45,12 +45,17 @@
 				</div>
 				<div class="details-content-wrapper">
 					<div class="details-title"><strong>Location:</strong></div>
-					<div class="details-content"><span>YMCA <br> 12 Hereford St <br> Christchurch Central <br> Christchurch 8140</span></div>
+					<div class="details-content">
+					<span>Spectrum’ Street Art Gallery<br>
+						Upstairs at the YMCA<br>
+						12 Hereford St <br>
+						Christchurch Central <br></span>
+					</div>
 				</div>
-				<div class="details-content-wrapper">
+<!-- 				<div class="details-content-wrapper">
 					<div class="details-title"><strong>Notes:</strong></div>
-					<div class="details-content">Here are some extra notes that will help you in knowing what to do here. E.g Parking at the Edmonds Gardens</div>
-				</div>
+					<div class="details-content"></div>
+				</div> -->
 			</div>
 		</div>
 		<div class="col-1-2">
