--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,18 @@
 		<div class="col-full text-center">
 			<h2 class="home-subtitle">Nov 26th 2016, Christchurch</h2>
 		</div>
+<!-- 		<div class="col-full text-center">
+			<p>Welcome! Here you will find important information about our wedding that should answer all of your questions.
+If this is not the case, please do not hesitate to email us at andrew.d.nicholas@gmail.com</p>
+
+max-width: 800px;
+    margin: 0 auto;
+    margin-top: 40px;
+    margin-bottom: -50px;
+		</div> -->
 	</div>
 	<%= render partial: 'pages/home_nav' %>
+	<div class="container-center">
+
+	</div>
 </div>
