--- a/app/views/pages/tips_and_tricks.html.erb
+++ b/app/views/pages/tips_and_tricks.html.erb
@@ -1,34 +1,40 @@
 <div class="container">
 	<div class="container-center page-heading">
 		<h1 class="page-title">Tips and Tricks</h1>
-		<p class="col-full text-center page-message">This is a blub about this section. What is it for?</p>
+		<p class="col-full text-center page-message">Here are some handy sites to check out for your time in Christchurch.
+</p>
 	</div>
 	<section class="container-center page-section container-sb">
 		<div class="col-padding">
 			<h2 class="text-center list-highlight-title">Things to Do</h2>
-			<!-- <p>This is a blurb about the things to do around the reception</p> -->
+			<!-- <p>(particularly helpful for the awkward wait time between the ceremony and reception)</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="">Art Gallery</a></li>
-				<li>Art Center</li>
-				<li>Museum</li>
+				<li class="list-item"><a href="http://www.thevillas.co.nz/">The Villas</a></li>
+				<li class="list-item"><a href="http://www.restart.org.nz/">Re:Start Mall</a></li>
+				<li class="list-item"><a href="http://www.artscentre.org.nz/">Art Center</a></li>
+				<li class="list-item"><a href="www.canterburymuseum.com/">Museum</a></li>
 			</ul>
 		</div>
 		<div class="col-padding">
-			<h2 class="text-center list-highlight-title">Accomodation</h2>
+			<h2 class="text-center list-highlight-title">Accommodation</h2>
 			<!-- <p>This is a blurb about suggested accomodation</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="">YMCA</a></li>
-				<li><a href="">Hotel 1</a></li>
-				<li><a href="">Hotel 2</a></li>
+				<li class="list-item"><a href="http://www.ymcachch.org.nz/accommodation-facilities/christchurch-accomodation/">YMCA</a></li>
+				<li class="list-item"><a href="http://www.yha.co.nz/hostels/south-island-hostels/yha-christchurch">YHA</a></li>
+				<li class="list-item"><a href="http://www.pavilionshotel.co.nz/">Pavilions Hotel</a></li>
+				<li class="list-item"><a href="http://www.orari.net.nz/">Orani</a></li>
+				<li class="list-item"><a href="http://www.dorset.co.nz/">Dorset</a></li>
+				<li class="list-item"><a href="https://www.airbnb.co.nz/">Airbnb</a></li>
+				<li class="list-item"><a href="https://www.bookabach.co.nz/">Bookabach</a></li>
 			</ul>
 		</div>
 		<div class="col-padding">
-			<h2 class="text-center list-highlight-title">Public Transport</h2>
-			<!-- <p>This is a blurb about suggested public transport</p> -->
+			<h2 class="text-center list-highlight-title">Colouring In</h2>
+<!-- 			<p>The prizes are grand and the competition is fierce! We know you are more excited to enter the Bicnic Colouring In Competition than you are to see us married. We understand. This is important.
+To help you crush those competitive Collins, beat the brilliant Bichans, nullify the nifty Nicholai, and to surpass the skillful Speirs, we have provided some handy links below:</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="">Buses</a></li>
-				<li><a href="">Uber</a></li>
-				<li><a href="">Taxi</a></li>
+				<li class="list-item"><a href="https://www.youtube.com/watch?v=c_FcWFIXusA">How to shade</a></li>
+				<li class="list-item"><a href="https://www.buzzfeed.com/ailbhemalone/colouring-in-to-the-next-level?utm_term=.fiGP7Ez6y#.gqvyLWZBP">Bring Your Colouring To The Next Level</a></li>
 			</ul>
 		</div>
 	</section>
