--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -52,7 +52,7 @@
 			}
 		}
 
-		&:nth-child(1) {
+		&:nth-child(5n + 1) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -63,13 +63,13 @@
 			}
 		}
 
-		&:nth-child(2) {
+		&:nth-child(5n + 2) {
 			&:before {
 				background: $colour2;
 			}
 		}
 
-		&:nth-child(3) {
+		&:nth-child(5n + 3) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -80,7 +80,7 @@
 			}
 		}
 
-		&:nth-child(4) {
+		&:nth-child(5n + 4) {
 			&:hover {
 				a {
 					color: #FFF;
@@ -92,7 +92,7 @@
 			}
 		}
 
-		&:nth-child(5) {
+		&:nth-child(5n + 5) {
 			
 			&:hover {
 				a {
