--- a/app/views/pages/rsvp.html.erb
+++ b/app/views/pages/rsvp.html.erb
@@ -55,8 +55,10 @@
 					      </li>
 					    <% end %>
 					</ul>
-
+					
 					<div class="rsvp-submit">
+
+						<p class="text-small">Please note that children are very welcome at the ceremony and reception.</p>
 						<%= f.submit 'Submit', class:"btn btn-yellow btn-full" %>
 					</div>
 				<% end %>
