--- a/app/views/pages/tips_and_tricks.html.erb
+++ b/app/views/pages/tips_and_tricks.html.erb
@@ -9,23 +9,24 @@
 			<h2 class="text-center list-highlight-title">Things to Do</h2>
 			<!-- <p>(particularly helpful for the awkward wait time between the ceremony and reception)</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="http://www.thevillas.co.nz/">The Villas</a></li>
-				<li class="list-item"><a href="http://www.restart.org.nz/">Re:Start Mall</a></li>
-				<li class="list-item"><a href="http://www.artscentre.org.nz/">Art Center</a></li>
-				<li class="list-item"><a href="www.canterburymuseum.com/">Museum</a></li>
+				<li class="list-item"><a href="http://www.thevillas.co.nz/" target="_blank">The Villas</a></li>
+				<li class="list-item"><a href="http://www.restart.org.nz/" target="_blank">Re:Start Mall</a></li>
+				<li class="list-item"><a href="http://www.artscentre.org.nz/" target="_blank">Art Center</a></li>
+				<li class="list-item"><a href="www.canterburymuseum.com/" target="_blank">Museum</a></li>
+				<li class="list-item"><a href="https://christchurchartgallery.org.nz/" target="_blank">Art Gallery</a></li>
 			</ul>
 		</div>
 		<div class="col-padding">
 			<h2 class="text-center list-highlight-title">Accommodation</h2>
 			<!-- <p>This is a blurb about suggested accomodation</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="http://www.ymcachch.org.nz/accommodation-facilities/christchurch-accomodation/">YMCA</a></li>
-				<li class="list-item"><a href="http://www.yha.co.nz/hostels/south-island-hostels/yha-christchurch">YHA</a></li>
-				<li class="list-item"><a href="http://www.pavilionshotel.co.nz/">Pavilions Hotel</a></li>
-				<li class="list-item"><a href="http://www.orari.net.nz/">Orani</a></li>
-				<li class="list-item"><a href="http://www.dorset.co.nz/">Dorset</a></li>
-				<li class="list-item"><a href="https://www.airbnb.co.nz/">Airbnb</a></li>
-				<li class="list-item"><a href="https://www.bookabach.co.nz/">Bookabach</a></li>
+				<li class="list-item"><a href="http://www.ymcachch.org.nz/accommodation-facilities/christchurch-accomodation/" target="_blank"	>YMCA</a></li>
+				<li class="list-item"><a href="http://www.yha.co.nz/hostels/south-island-hostels/yha-christchurch" target="_blank">YHA</a></li>
+				<li class="list-item"><a href="http://www.pavilionshotel.co.nz/" target="_blank">Pavilions Hotel</a></li>
+				<li class="list-item"><a href="http://www.orari.net.nz/" target="_blank">Orani</a></li>
+				<li class="list-item"><a href="http://www.dorset.co.nz/" target="_blank">Dorset</a></li>
+				<li class="list-item"><a href="https://www.airbnb.co.nz/" target="_blank">Airbnb</a></li>
+				<li class="list-item"><a href="https://www.bookabach.co.nz/" target="_blank">Bookabach</a></li>
 			</ul>
 		</div>
 		<div class="col-padding">
@@ -33,8 +34,8 @@
 <!-- 			<p>The prizes are grand and the competition is fierce! We know you are more excited to enter the Bicnic Colouring In Competition than you are to see us married. We understand. This is important.
 To help you crush those competitive Collins, beat the brilliant Bichans, nullify the nifty Nicholai, and to surpass the skillful Speirs, we have provided some handy links below:</p> -->
 			<ul class="list list-highlight ">
-				<li class="list-item"><a href="https://www.youtube.com/watch?v=c_FcWFIXusA">How to shade</a></li>
-				<li class="list-item"><a href="https://www.buzzfeed.com/ailbhemalone/colouring-in-to-the-next-level?utm_term=.fiGP7Ez6y#.gqvyLWZBP">Bring Your Colouring To The Next Level</a></li>
+				<li class="list-item"><a href="https://www.youtube.com/watch?v=c_FcWFIXusA" target="_blank">How to shade</a></li>
+				<li class="list-item"><a href="https://www.buzzfeed.com/ailbhemalone/colouring-in-to-the-next-level?utm_term=.fiGP7Ez6y#.gqvyLWZBP" target="_blank">Bring Your Colouring To The Next Level</a></li>
 			</ul>
 		</div>
 	</section>
