--- a/app/views/pages/details.html.erb
+++ b/app/views/pages/details.html.erb
@@ -46,7 +46,7 @@
 				<div class="details-content-wrapper">
 					<div class="details-title"><strong>Location:</strong></div>
 					<div class="details-content">
-					<span>Spectrum’ Street Art Gallery<br>
+					<span>Spectrum Street Art Gallery<br>
 						Upstairs at the YMCA<br>
 						12 Hereford St <br>
 						Christchurch Central <br></span>
