--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -6,4 +6,16 @@
 	<div class="container-center gifts">
 		<%= react_component 'Gifts', { data: @gifts, current_user: @user_id } %>
 	</div>
+
+	<div class="container-center gifts">
+		<h3>Other Ideas</h3>
+		<div class="no-click-gift gift">
+			<div class="form-inline no-click">Farmers Vouchers</div>
+			<div class="form-inline no-click">Petrol vouchers for our honeymoon</div>
+			<div class="form-inline no-click">A copy of your favourite book</div>
+			<div class="form-inline no-click">A framed picture of your face for our walls</div>
+			<div class="form-inline no-click">Your favourite luxury cooking ingredient</div>
+			<div class="form-inline no-click">Your favourite wine or beer</div>
+		</div>
+	</div>
 </div>
